--- a/OOTDAY/app/src/main/res/layout/login_view.xml
+++ b/OOTDAY/app/src/main/res/layout/login_view.xml
@@ -137,41 +137,37 @@
 
         />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:id="@+id/auth_links_container"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
+        android:orientation="horizontal"
+        android:gravity="center"
         app:layout_constraintTop_toBottomOf="@id/login_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
         <TextView
-        android:id="@+id/text_signup"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="회원가입"
-        android:textColor="@color/gray_dark"
-        android:textSize="@dimen/title_small_size"
-        android:clickable="true"
-        android:focusable="true"
-        android:layout_marginStart="50sp"
-        app:layout_constraintHorizontalChainStyle="packed" app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/divider1"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+            android:id="@+id/text_signup"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="회원가입"
+            android:textColor="@color/gray_dark"
+            android:textSize="@dimen/title_small_size"
+            android:fontFamily="@font/noto_sans_kr_regular"
+            android:clickable="true"
+            android:focusable="true"
+            android:layout_marginRight="16sp"/>
 
         <TextView
             android:id="@+id/divider1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="|"
+            android:text=" | "
             android:textColor="@color/gray_dark"
-            android:textSize="@dimen/title_large_size"
-            app:layout_constraintStart_toEndOf="@+id/text_signup"
-            app:layout_constraintEnd_toStartOf="@+id/text_find_id"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            android:textSize="@dimen/title_small_size"
+            android:layout_marginRight="16sp"/>
 
         <TextView
             android:id="@+id/text_find_id"
@@ -180,41 +176,33 @@
             android:text="아이디 찾기"
             android:textColor="@color/gray_dark"
             android:textSize="@dimen/title_small_size"
+            android:fontFamily="@font/noto_sans_kr_regular"
             android:clickable="true"
             android:focusable="true"
-            app:layout_constraintStart_toEndOf="@+id/divider1"
-            app:layout_constraintEnd_toStartOf="@+id/divider2"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            android:layout_marginRight="16sp" />
 
         <TextView
             android:id="@+id/divider2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="|"
+            android:text=" | "
             android:textColor="@color/gray_dark"
-            android:textSize="@dimen/title_large_size"
-            app:layout_constraintStart_toEndOf="@+id/text_find_id"
-            app:layout_constraintEnd_toStartOf="@+id/text_find_password"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            android:textSize="@dimen/title_small_size"
+            android:layout_marginRight="16sp"/>
 
         <TextView
             android:id="@+id/text_find_password"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="비밀번호 찾기"
-            android:layout_marginEnd="50sp"
             android:textColor="@color/gray_dark"
             android:textSize="@dimen/title_small_size"
+            android:fontFamily="@font/noto_sans_kr_regular"
             android:clickable="true"
             android:focusable="true"
-            app:layout_constraintStart_toEndOf="@+id/divider2"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
