--- a/OOTDAY/app/src/main/res/layout/login_view.xml
+++ b/OOTDAY/app/src/main/res/layout/login_view.xml
@@ -92,11 +92,26 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
+    <TextView
+        android:id="@+id/login_error"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="-15sp"
+        android:layout_marginStart="40sp"
+        android:fontFamily="@font/noto_sans_kr_regular"
+        android:text=""
+        android:textColor="@color/font_red"
+        android:textSize="@dimen/title_small_size"
+        app:layout_constraintTop_toBottomOf="@+id/password_area"
+        app:layout_constraintStart_toStartOf="parent"
+        />
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/password_area"
-        app:layout_constraintStart_toStartOf="@+id/password_area"
+        android:layout_marginTop="-10sp"
+        app:layout_constraintTop_toBottomOf="@+id/login_error"
+        app:layout_constraintStart_toStartOf="@+id/login_error"
         >
 
         <CheckBox
