--- a/OOTDAY/app/src/main/res/layout/login_view.xml
+++ b/OOTDAY/app/src/main/res/layout/login_view.xml
@@ -102,6 +102,7 @@
         android:text=""
         android:textColor="@color/font_red"
         android:textSize="@dimen/title_small_size"
+        android:visibility="gone"
         app:layout_constraintTop_toBottomOf="@+id/password_area"
         app:layout_constraintStart_toStartOf="parent"
         />
@@ -109,9 +110,8 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="-10sp"
         app:layout_constraintTop_toBottomOf="@+id/login_error"
-        app:layout_constraintStart_toStartOf="@+id/login_error"
+        app:layout_constraintStart_toStartOf="@+id/password_area"
         >
 
         <CheckBox
