--- a/OOTDAY/app/src/main/res/values/themes.xml
+++ b/OOTDAY/app/src/main/res/values/themes.xml
@@ -3,6 +3,12 @@
     <style name="Base.Theme.OOTDAY" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="android:statusBarColor">
+            @color/gray_light
+        </item>
+        <item name="android:windowLightStatusBar">
+            true
+        </item>
     </style>
 
     <style name="Theme.OOTDAY" parent="Base.Theme.OOTDAY" />
