--- a/OOTDAY/app/src/main/res/drawable/ic_check_default.xml
+++ b/OOTDAY/app/src/main/res/drawable/ic_check_default.xml
@@ -1,6 +1,6 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="12dp"
-    android:height="8dp"
+    android:width="12sp"
+    android:height="8sp"
     android:viewportWidth="12"
     android:viewportHeight="8">
   <path
