--- a/OOTDAY/app/src/main/res/layout/activity_splash.xml
+++ b/OOTDAY/app/src/main/res/layout/activity_splash.xml
@@ -14,7 +14,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/btn_pressed_login_button" />
+        app:srcCompat="@drawable/ic_ootday_logo" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
