--- a/OOTDAY/app/src/main/res/layout/sign_up_cong_activity.xml
+++ b/OOTDAY/app/src/main/res/layout/sign_up_cong_activity.xml
@@ -9,7 +9,7 @@
         android:id="@+id/step5_message_line1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="80sp"
+        android:layout_marginTop="60sp"
         android:paddingHorizontal="30sp"
         android:text="가입이 완료되었어요."
         android:textSize="@dimen/body_large_size"
@@ -17,12 +17,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
+-
     <TextView
         android:id="@+id/step5_message_line2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingHorizontal="30sp"
+        android:layout_marginTop="-38sp"
         android:text="이제 내 옷장을 채우고"
         android:textSize="@dimen/body_large_size"
         android:fontFamily="@font/noto_sans_kr_bold"
@@ -35,6 +36,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingHorizontal="30sp"
+        android:layout_marginTop="-38sp"
         android:text="스타일 추천을 받아보세요."
         android:textSize="@dimen/body_large_size"
         android:fontFamily="@font/noto_sans_kr_bold"
@@ -42,46 +44,33 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/step5_message_line2" />
 
-    <FrameLayout
-        android:id="@+id/step5_image_frame"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginHorizontal="24sp"
-        android:layout_marginVertical="60sp"
-        android:background="@color/gray_medium"
-        app:layout_constraintDimensionRatio="1:1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/step5_message_line3"
-        app:layout_constraintBottom_toTopOf="@+id/step5_login_button">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="어... 회원가입을\n축하해주는 뭔가..\n.....이미지..?"
-            android:gravity="center"
-            android:fontFamily="@font/noto_sans_kr_medium"
-            android:textSize="@dimen/body_medium_size"
-            android:textColor="@color/gray_dark" />
-
-    </FrameLayout>
-
-    <Button
-        android:id="@+id/step5_login_button"
+    <ImageView
+        android:id="@+id/cong_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="40sp"
-        android:text="로그인 화면으로 이동하기"
-        android:fontFamily="@font/noto_sans_kr_bold"
-        android:textSize="@dimen/body_large_size"
-        android:background="@drawable/sl_next_button_selector"
-        app:backgroundTint="@null"
-        app:elevation="0dp"
-        android:stateListAnimator="@null"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:src="@drawable/ic_congratulation"
+
+        android:layout_marginBottom="50sp"
+        app:layout_constraintBottom_toTopOf="@+id/move_to_login_button"
         app:layout_constraintEnd_toEndOf="parent"
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/step5_message_line3" />
+
+    <Button
+        android:id="@+id/move_to_login_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/sl_next_button_selector"
+        android:stateListAnimator="@null"
+        app:backgroundTint="@null"
+
+
+        app:elevation="0dp"
+
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+
+        app:layout_constraintTop_toBottomOf="@id/cong_image" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
