--- a/OOTDAY/app/src/main/res/layout/sign_up_activity.xml
+++ b/OOTDAY/app/src/main/res/layout/sign_up_activity.xml
@@ -42,7 +42,7 @@
                 android:id="@+id/page_indicator"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="1/5"
+                android:text="1/4"
                 android:textSize="@dimen/title_medium_size"
                 android:textColor="@color/signup_text_color"
                 android:alpha="0.8"
@@ -58,13 +58,12 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <fragment
+    <androidx.fragment.app.FragmentContainerView
         android:id="@+id/signup_main_fragment"
-        android:name="androidx.navigation.fragment.NavHostFragment"
 
         android:layout_width="0sp"
         android:layout_height="0sp"
-        android:tag="signiup_main_fragment"
+        android:tag="signup_main_fragment"
 
 
         app:layout_constraintBottom_toBottomOf="parent"
