--- a/OOTDAY/app/src/main/res/layout/sign_up_step2.xml
+++ b/OOTDAY/app/src/main/res/layout/sign_up_step2.xml
@@ -41,19 +41,20 @@
         />
 
     <Button
-        android:id="@+id/step2_check_auth_button"
+        android:id="@+id/step2_get_auth_button"
         android:layout_width="63sp"
         android:layout_height="28sp"
-        android:background="@drawable/sl_signup_check_selecter"
+        android:background="@drawable/sl_signup_get_selector"
         app:backgroundTint="@null"
         app:elevation="0dp"
-        android:stateListAnimator="@null"
-        app:layout_constraintEnd_toEndOf="@id/step2_get_auth_button"
-        app:layout_constraintStart_toStartOf="@+id/step2_get_auth_button"
-        app:layout_constraintTop_toTopOf="@+id/step2_phone_number_confirm"
-        app:layout_constraintBottom_toBottomOf="@+id/step2_phone_number_confirm"
-         />
 
+
+        android:stateListAnimator="@null"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/step2_phone_number_input"
+        app:layout_constraintTop_toTopOf="@+id/step2_phone_number_input"
+        app:layout_constraintBottom_toBottomOf="@+id/step2_phone_number_input"
+        />
 
 
     <EditText
@@ -90,20 +91,17 @@
 
 
     <Button
-        android:id="@+id/step2_get_auth_button"
+        android:id="@+id/step2_check_auth_button"
         android:layout_width="63sp"
         android:layout_height="28sp"
-        android:background="@drawable/sl_signup_get_selector"
+        android:background="@drawable/sl_signup_check_selecter"
         app:backgroundTint="@null"
         app:elevation="0dp"
-
-
         android:stateListAnimator="@null"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/step2_phone_number_input"
-        app:layout_constraintTop_toTopOf="@+id/step2_phone_number_input"
-        app:layout_constraintBottom_toBottomOf="@+id/step2_phone_number_input"
-        />
+        app:layout_constraintStart_toEndOf="@+id/step2_phone_number_confirm"
+        app:layout_constraintTop_toTopOf="@+id/step2_phone_number_confirm"
+        app:layout_constraintBottom_toBottomOf="@+id/step2_phone_number_confirm"/>
 
     <Button
         android:id="@+id/step2_next_button"
