--- a/OOTDAY/app/src/main/res/layout/sign_up_step3.xml
+++ b/OOTDAY/app/src/main/res/layout/sign_up_step3.xml
@@ -31,6 +31,7 @@
         android:textSize="@dimen/body_medium_size"
         android:backgroundTint="@color/gray_medium"
         android:maxLines="1"
+        android:maxLength="20"
         android:layout_marginVertical="54sp"
         android:layout_marginHorizontal="24sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -42,7 +43,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="-15sp"
-        android:layout_marginStart="40sp"
         android:fontFamily="@font/noto_sans_kr_regular"
         android:text="안녕하세요"
         android:textColor="@color/font_red"
