--- a/OOTDAY/app/src/main/res/values/styles.xml
+++ b/OOTDAY/app/src/main/res/values/styles.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- Typography Styles -->
-
+    <style name="BottomNavigation.IconOnly" parent="Widget.MaterialComponents.BottomNavigationView">
+        <item name="itemIconSize">40sp</item>
+    </style>
     <!-- Headline Styles -->
 </resources>
